--- a/index.html
+++ b/index.html
@@ -21,44 +21,46 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo" href="./index.html">Web<span>Studio</span></a>
-        <ul class="header-nav-list">
-          <li class="header-nav-item">
-            <a class="link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-nav-item">
-            <a class="link" href="">Portfolio</a>
-          </li>
-          <li class="header-nav-item">
-            <a class="link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-address">
-        <ul class="header-address-list">
-          <li class="header-adress-item">
-            <a
-              class="link"
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="header-adress-item">
-            <a
-              class="link"
-              href="tel:+110001111111"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              +11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="header-nav">
+          <a class="logo" href="./index.html">Web<span>Studio</span></a>
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="link" href="">Portfolio</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="header-adress-item">
+              <a
+                class="link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="header-adress-item">
+              <a
+                class="link"
+                href="tel:+110001111111"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                +11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main class="main">
       <section class="hero">
@@ -66,167 +68,175 @@
         <button class="hero-btn" type="button">Order Service</button>
       </section>
       <section class="feature">
-        <h2 hidden>Feature</h2>
-        <ul class="feature-list">
-          <li class="feature-item">
-            <h3 class="subtitle">Strategy</h3>
-            <p class="body-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="subtitle">Punctuality</h3>
-            <p class="body-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="subtitle">Diligence</h3>
-            <p class="body-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="subtitle">Technologies</h3>
-            <p class="body-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Feature</h2>
+          <ul class="feature-list">
+            <li class="feature-item">
+              <h3 class="subtitle">Strategy</h3>
+              <p class="body-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="subtitle">Punctuality</h3>
+              <p class="body-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="subtitle">Diligence</h3>
+              <p class="body-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="subtitle">Technologies</h3>
+              <p class="body-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-1.jpg"
-              alt="team-1"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Mark Guerrero</h3>
-            <p class="body-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-2.jpg"
-              alt="team-2"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Tom Ford</h3>
-            <p class="body-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-3.jpg"
-              alt="team-3"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Camila Garcia</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team-4.jpg"
-              alt="team-4"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Daniel Wilson</h3>
-            <p class="body-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-1.jpg"
+                alt="team-1"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Mark Guerrero</h3>
+              <p class="body-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-2.jpg"
+                alt="team-2"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Tom Ford</h3>
+              <p class="body-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-3.jpg"
+                alt="team-3"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Camila Garcia</h3>
+              <p class="body-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team-4.jpg"
+                alt="team-4"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Daniel Wilson</h3>
+              <p class="body-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio">
-        <h2 class="title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-items">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-1.jpg"
-              alt="portfolio-1"
-              width="360"
-              height="300"
-            />
-            <h3 class="subtitle">Banking App</h3>
-            <p class="body-text">App</p>
-          </li>
-          <li class="portfolio-items">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-2.jpg"
-              alt="portfolio-2"
-              width="360"
-              height="300"
-            />
-            <h3 class="subtitle">Cashless Payment</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-          <li class="portfolio-items">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-3.jpg"
-              alt="portfolio-3"
-              width="360"
-              height="300"
-            />
-            <h3 class="subtitle">Meditation App</h3>
-            <p class="body-text">App</p>
-          </li>
-          <li class="portfolio-items">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-4.jpg"
-              alt="portfolio-4"
-              width="360"
-              height="300"
-            />
-            <h3 class="subtitle">Taxi Service</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-          <li class="portfolio-items">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-5.jpg"
-              alt="portfolio-5"
-              width="360"
-              height="300"
-            />
-            <h3 class="subtitle">Screen Illustrations</h3>
-            <p class="body-text">Design</p>
-          </li>
-          <li class="portfolio-items">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio-6.jpg"
-              alt="portfolio-6"
-              width="360"
-              height="300"
-            />
-            <h3 class="subtitle">Online Courses</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-items">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-1.jpg"
+                alt="portfolio-1"
+                width="360"
+                height="300"
+              />
+              <h3 class="subtitle">Banking App</h3>
+              <p class="body-text">App</p>
+            </li>
+            <li class="portfolio-items">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-2.jpg"
+                alt="portfolio-2"
+                width="360"
+                height="300"
+              />
+              <h3 class="subtitle">Cashless Payment</h3>
+              <p class="body-text">Marketing</p>
+            </li>
+            <li class="portfolio-items">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-3.jpg"
+                alt="portfolio-3"
+                width="360"
+                height="300"
+              />
+              <h3 class="subtitle">Meditation App</h3>
+              <p class="body-text">App</p>
+            </li>
+            <li class="portfolio-items">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-4.jpg"
+                alt="portfolio-4"
+                width="360"
+                height="300"
+              />
+              <h3 class="subtitle">Taxi Service</h3>
+              <p class="body-text">Marketing</p>
+            </li>
+            <li class="portfolio-items">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-5.jpg"
+                alt="portfolio-5"
+                width="360"
+                height="300"
+              />
+              <h3 class="subtitle">Screen Illustrations</h3>
+              <p class="body-text">Design</p>
+            </li>
+            <li class="portfolio-items">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio-6.jpg"
+                alt="portfolio-6"
+                width="360"
+                height="300"
+              />
+              <h3 class="subtitle">Online Courses</h3>
+              <p class="body-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="delete">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="delete">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
