--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700..800&family=Roboto:wght@400..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Effective Solutions for Your Business</title>
   </head>
   <body>
@@ -64,8 +64,10 @@
     </header>
     <main class="main">
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <section class="feature">
         <div class="container">
@@ -165,8 +167,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Banking App</h3>
-              <p class="body-text">App</p>
+              <div class="portfolio-descr">
+                <h3 class="subtitle">Banking App</h3>
+                <p class="body-text">App</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -176,8 +180,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Cashless Payment</h3>
-              <p class="body-text">Marketing</p>
+              <div class="portfolio-descr">
+                <h3 class="subtitle">Cashless Payment</h3>
+                <p class="body-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -187,8 +193,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Meditation App</h3>
-              <p class="body-text">App</p>
+              <div class="portfolio-descr">
+                <h3 class="subtitle">Meditation App</h3>
+                <p class="body-text">App</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -198,8 +206,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Taxi Service</h3>
-              <p class="body-text">Marketing</p>
+              <div class="portfolio-descr">
+                <h3 class="subtitle">Taxi Service</h3>
+                <p class="body-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -209,8 +219,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Screen Illustrations</h3>
-              <p class="body-text">Design</p>
+              <div class="portfolio-descr">
+                <h3 class="subtitle">Screen Illustrations</h3>
+                <p class="body-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -220,8 +232,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Online Courses</h3>
-              <p class="body-text">Marketing</p>
+              <div class="portfolio-descr">
+                <h3 class="subtitle">Online Courses</h3>
+                <p class="body-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
