--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
-      integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700..800&family=Roboto:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
     <title>Effective Solutions for Your Business</title>
   </head>
   <body>
@@ -71,7 +71,7 @@
       </section>
       <section class="feature">
         <div class="container">
-          <h2 hidden>Feature</h2>
+          <h2 class="visually-hidden">Feature</h2>
           <ul class="feature-list">
             <li class="feature-item">
               <h3 class="subtitle">Strategy</h3>
@@ -116,8 +116,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Mark Guerrero</h3>
-              <p class="body-text">Product Designer</p>
+              <div class="peolple">
+                <h3 class="subtitle">Mark Guerrero</h3>
+                <p class="body-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -127,8 +129,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Tom Ford</h3>
-              <p class="body-text">Frontend Developer</p>
+              <div class="peolple">
+                <h3 class="subtitle">Tom Ford</h3>
+                <p class="body-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -138,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Camila Garcia</h3>
-              <p class="body-text">Marketing</p>
+              <div class="peolple">
+                <h3 class="subtitle">Camila Garcia</h3>
+                <p class="body-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -149,8 +155,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Daniel Wilson</h3>
-              <p class="body-text">UI Designer</p>
+              <div class="peolple">
+                <h3 class="subtitle">Daniel Wilson</h3>
+                <p class="body-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
