--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-flex">
+      <div class="header-flex container">
         <nav class="header-nav">
           <a class="logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="header-nav-list">
