--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-flex container">
+      <div class="container header-flex">
         <nav class="header-nav">
           <a class="logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="header-nav-list">
@@ -63,12 +63,14 @@
       </div>
     </header>
     <main class="main">
+      <!--First section-->
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
+      <!--Second section-->
       <section class="feature">
         <div class="container">
           <h2 class="visually-hidden">Feature</h2>
@@ -104,6 +106,7 @@
           </ul>
         </div>
       </section>
+      <!--Third section Stop tyt3.3-->
       <section class="team">
         <div class="container">
           <h2 class="title">Our Team</h2>
@@ -163,6 +166,7 @@
           </ul>
         </div>
       </section>
+      <!--Fourth section-->
       <section class="portfolio">
         <div class="container">
           <h2 class="title">Our Portfolio</h2>
